--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,7 @@
-/* purgecss start ignore */
 @tailwind base;
 @tailwind components;
-/* purgecss end ignore */
-
 @tailwind utilities;
+
+.h-84 {
+  height: 21rem;
+}
